--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Chuck Norris Joke Generator</title>
 </head>
 <body>
-   
+  <main>
+    <div id="main-body">
+      <h1>Chuck Norris Jokes</h1>
+      <div class="jokes">
+        <p>Loading...</p>
+      </div>
+      <button>Get Another Joke</button>
+    </div>
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
